crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/brokenDep.usd
version https://git-lfs.github.com/spec/v1
oid sha256:eaaff815cfc799bb293f86dff465906dedf860b51459c8b934155735dd51cc2e
size 109
